Handle missing JavaFX modules in Main